# DARG-Mkt-Intel

./: CONTRIBUTING.md  pyproject.toml  setup_developer_environment.md
components/: action_recommendation.py
darg_github_export_updated/: app.py  pyproject.toml  requirements.txt
darg_github_export_updated/ReadME/: Supabase Setup Guide
darg_github_export_updated/components/: opportunity_map.py
darg_github_export_updated/pages/: connection_status.py  roi_calculator.py
darg_github_export_updated/utils/: data_access.py
github_export/: CODE_STANDARDS.md  LICENSE  README.md  REPLIT_TO_GITHUB_TRANSFER.md  app.py  github_requirements.txt  pyproject.toml
github_export/components/: insight_card.py
github_export/pages/: how_to_engage.py  whats_changing.py  where_to_invest.py  who_to_target.py
github_export/utils/: html_render.py  tier_control.py
utils/: sample_data.py  sql_functions.py
