[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.19.5",
    "numpy>=2.2.5",
    "openai>=1.76.2",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "psycopg2-binary>=2.9.10",
    "pydeck>=0.9.1",
    "requests>=2.32.3",
    "streamlit-folium>=0.25.0",
    "streamlit>=1.45.0",
    "supabase>=2.15.1",
]
